--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@fullcalendar/core": "^6.1.15",
+        "@fullcalendar/daygrid": "^6.1.15",
+        "@fullcalendar/interaction": "^6.1.15",
+        "@fullcalendar/timegrid": "^6.1.15",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     }
